--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
         "antd": "^4.14.0",
         "babel-plugin-import": "^1.13.3",
         "cross-env": "^5.0.0",
+        "html-react-parser": "^1.2.4",
         "laravel-mix": "^6.0.13",
+        "pexels": "^1.0.1",
         "postcss": "^8.2.8",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-infinite-scroller": "^1.2.4",
-        "react-lazy-load-image-component": "^1.5.1"
+        "react-lazy-load-image-component": "^1.5.1",
+        "unsplash-js": "^6.0.0"
     },
     "dependencies": {}
 }
