--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1.0",
-        "laravel/framework": "^7.0",
-        "spatie/laravel-medialibrary": "^7.5"
+        "laravel/framework": "^7.0|^8.0",
+        "spatie/laravel-medialibrary": "^7.5|^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
